[package]
version = "0.1.2"
name = "graphviz-sys"
description = "Low level bindings to graphviz."
repository = "https://github.com/19h/graphviz-sys"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
license = "MIT"
readme = "readme.md"
edition = "2018"

[[example]]
name = "example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.51.1"
