[package]
version = "1.0.0"
name = "graphviz-sys"
description = "Low level bindings to graphviz."
repository = "https://github.com/19h/graphviz-sys"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
license = "MIT"
readme = "readme.md"
edition = "2018"

[[example]]
name = "dot"

[build-dependencies]
bindgen = "0.71.1"
